Link to grow habit

--- a/_data/books.yml
+++ b/_data/books.yml
@@ -145,6 +145,8 @@ cards:
     url: https://ridero.ru/books/razvit_privychku/
   - name: ЛитРес
     url: https://www.litres.ru/konstantin-morenko/razvit-privychku/
+  - name: Онлайн
+    url: https://konstantin-morenko.ru/grow-habit-book/
   isbn: 978-5-0056-7041-0
 
   quote: Что может быть сильнее привычки?  Только привычка развивать привычки
