--- a/_data/science.yml
+++ b/_data/science.yml
@@ -19,7 +19,13 @@ cards:
   quote: Не только написать статью, но и помнить весь список
   description: |
 
-    Список научных трудов.
+    Как ученому, мне постоянно приходится не только совершать научные
+    открытия, но и доносить их до широкой общественности.  Причем, не
+    только научной общественности.  Сколько же всего я написал за свою
+    научную карьеру?  А за последние пять лет?  А сколько патентов?
+    Всю эту информацию приходится тщательно собирать и
+    структурировать.  Чтобы не запутаться в этом ворохе ссылок, у меня
+    есть своя собственная страница с научными трудами.
 
 
 - name: Форма отчета по ГОСТ 7.32-2017
@@ -27,7 +33,12 @@ cards:
     url: https://github.com/konstantin-morenko/report-732-2017
     name: GitHub
 
-  quote: Не только написать статью, но и помнить весь список
+  quote: Сделать научное открытие — только полдела; отчитаться о нем — вот где приключения
   description: |
 
-    Список научных трудов.
+    Всякий ученый должен быть творческим человеком, иначе как он
+    сможет сделать научное открытие?  Но всякому творческому человеку
+    обычно чужды стандарты и нормативы.  Чтобы избавиться от
+    необходимости самому оформлять каждую запяту и каждый отступ в
+    отчете, я решил поручить эту работу компьютеру.  А сам пока пойду
+    за следующим научным открытием.
