Rhythmic work book online link

--- a/_data/books.yml
+++ b/_data/books.yml
@@ -178,6 +178,8 @@ cards:
     url: https://ridero.ru/books/ritmichnaya_rabota/
   - name: ЛитРес
     url: https://www.litres.ru/konstantin-morenko/ritmichnaya-rabota/
+  - name: Онлайн
+    url: https://konstantin-morenko.ru/rhythmic-work-book/
   isbn: 978-5-0059-0920-6
 
   quote: Ритмы окружают нас повсюду, даже в работе
