--- a/_data/certificates.yml
+++ b/_data/certificates.yml
@@ -1,4 +1,3 @@
-
 header: Сертификаты
 
 description: Небольшие кусочки знаний из самых разных областей
@@ -56,3 +55,9 @@ list:
   place: Национальный открытый университет ИНТУИТ
   value: 72 часа
   description: Прогресс не остановить!
+
+- title: Аналитические шаблоны проектирования приложений
+  date: июнь 2023
+  place: Национальный открытый университет ИНТУИТ
+  value: 72 часа
+  description: Конструируем программу из блоков
