Article template dirs

--- a/_data/science.yml
+++ b/_data/science.yml
@@ -42,3 +42,21 @@ cards:
     необходимости самому оформлять каждую запяту и каждый отступ в
     отчете, я решил поручить эту работу компьютеру.  А сам пока пойду
     за следующим научным открытием.
+
+- name: Шаблон каталогов для научной статьи
+  links:
+  - url: https://github.com/konstantin-morenko/article-template-dirs
+    text: GitHub
+  - url: https://github.com/konstantin-morenko/article-template-dirs/archive/refs/heads/master.zip
+    text: zip-архив
+
+  quote: Каждая научная статья начинается одинаково — сначала создаем папку
+  description: |
+
+    Каждая научная статья — это не просто "файл", это целая история.
+    Это и поиск литературы по теме, это и текст статьи, это и
+    переписка с редакцией.  Да еще и текст статьи часто включает
+    схемы, графики, фотографии.  Очень легко увязнуть в материалах,
+    особенно если одновременно приходится работать с несколькими
+    статьями.  Можно привнести немного порядка с помощью четкой и
+    прозрачной структуры папок.  Каждому файлу — свое место.
