Book links to timer

--- a/_data/books.yml
+++ b/_data/books.yml
@@ -180,6 +180,8 @@ cards:
     url: https://www.litres.ru/konstantin-morenko/ritmichnaya-rabota/
   - name: Онлайн
     url: https://konstantin-morenko.ru/rhythmic-work-book/
+  - name: Таймер
+    url: https://timer.konstantin-morenko.ru/
   isbn: 978-5-0059-0920-6
 
   quote: Ритмы окружают нас повсюду, даже в работе
