Just the Docs project

--- a/_data/programming.yml
+++ b/_data/programming.yml
@@ -63,3 +63,21 @@ cards:
     инструмент, даже на StackExchange, но так и не нашел его.  В
     результате пришлось сделать его самостоятельно.  Это — пакет для
     верстки пояснений под формулы.
+
+
+- name: Just the Docs Reborn
+  platform: Jekyll
+  languages: [HTML, CSS, JS]
+  years: 2023
+  links:
+  - text: GitHub
+    url: https://github.com/konstantin-morenko/just-the-docs-reborn
+
+  quote: Когда хочешь публиковать тексты в интернете — важно правильно выбрать инструмент
+  description: |
+
+    Первоначально система Just the Docs предназначалась для верстки
+    сайтов с документацией к программам.  Но ведь ее можно
+    использовать и для верстки сайтов с самыми разными материалами,
+    вплоть до художественных книг.  Немного доработки — и появляется
+    поиск на русском языке и некоторые другие «фичи».
