--- a/_data/projects/education.yml
+++ b/_data/projects/education.yml
@@ -10,43 +10,131 @@ link_block:
 
 cards:
 
+- name: Автоматика
+  links:
+    - name: Материалы по курсу
+      url: https://konstantin-morenko.ru/bch-automation/
+  since: 2022
+  level: Бакалавриат
+
+  quote: Автоматические устройства окружают нас повсюду
+  description: |
+
+    Современная жизнь невозможна без автоматики.  Но из чего же
+    состоят автоматические устройства?  Как они работают и как
+    заставить их делать то, что нужно именно нам?  Как поддерживать
+    температуру воды в бойлере?  От чего она зависит и зачем вообще
+    для этого система автоматики?
+
+
+- name: Управляющие устройства
+  links:
+    - name: Материалы по курсу
+      url: https://konstantin-morenko.ru/bch-control-devices/
+  years: 2023
+  level: Бакалавриат
+
+  quote: Сбросить проблему принятия решений на бездушную машину
+  description: |
+
+    Всякая система автоматики содержит в себе много узлов.  Один из
+    них — управляющее устройство, «мозг» всей системы.  Именно оно
+    принимает решение о включении нагрева, когда вода в бойлере
+    остыла, и именно оно отключает нагрев, чтобы вода не начала
+    кипеть.  Современные управляющие устройства — почти всегда
+    микроконтроллеры.  А это значит только одно — программирование.
+
+
+- name: Управление проектами и процессами
+  links:
+    - name: Материалы по курсу
+      url: https://konstantin-morenko.ru/masters-project-management/
+  years: 2021–2022
+  level: Магистратура
+
+  quote: Любым процессом можно управлять.  Где тут панель управления?
+  description: |
+
+    Каждый менеджер видит мир как нагромождение процессов:
+    приготовление еды, обслуживание клиентов, производство машин, даже
+    заваривание чая — все это процессы.  И он обязан сделать эти
+    процессы эффективными и экономичными.  Но что означают слова
+    «эффективность», «экономичность» и «процесс»?
+
+
 - name: Коммерциализация научных разработок
   links:
+    - name: Материалы по курсу
+      url: https://konstantin-morenko.ru/phd-commercialization/
     - name: Курс лекций
       url: https://konstantin-morenko.ru/phd-commercialization-book/
-  since: 2022
+  years: 2022
+  level: Аспирантура
 
   quote: Важно не только сделать превосходный продукт, важно еще и продать его
   description: |
 
-    Все началость как небольшой экскурс в экономику и в проблему
-    коммерциализации инновационных продуктов и научных разработок.
-    Проект все еще в начальной стадии, но может использоваться как
-    учебное пособие для студентов.
+    Капиталистический мир регулирует экономику через механизмы рынка.
+    Теперь уже мало сделать какой-то продукт, нужно найти на него
+    покупателей.  А если это инновационный научный продукт?  Как
+    грамотно продать идею, и не остаться при этом в проигрыше?  От
+    чего зависит цена идей и на каком рынке они продаются?
+
+
+- name: Возобновляемая энергетика
+  links:
+    - name: Материалы по курсу
+      url: https://konstantin-morenko.ru/phd-renewable-energy/
+    - name: 300 вопросов и ответов
+      url: https://konstantin-morenko.ru/phd-renewable-book/
+  since: 2022
+  level: Аспирантура
+
+  quote: Взойдет ли завтра Солнце?  Весьма вероятно
+  description: |
+
+    Возобновляемая энергетика становится все более популярной.  Этому
+    способствует как технологический прогресс, так и забота об
+    экологии.  Но что из себя представляет вся возобновляемая
+    энергетика?  Это и энергия солнца, ветра, биотоплива, и энергия
+    морских волн, подземного тепла земли и даже приливов и отливов.
+    Что объединяет все эти виды энергии и в чем они похожи?
+
 
 - name: Электротехнологии и аккумуляторы
   links:
     - name: Справочник по аккумуляторам и электрическим технологиям
       url: https://battery-info.ru
   since: 2013
-  till: 2015
 
-  quote:
+  quote: Аккумуляторы сделали электрическую энергию переносной
   description: |
 
-    Проект начался как перевод статей, но со временем превратился в
-    целый справочник.
+    Электрическая энергия в современном мире используется везде.  Даже
+    когда нам нужно управлять другими видами энергии.  Разработка
+    компактных и энергоемких аккумуляторов позволила сделать
+    электрическую энергию переносной в огромных масштабах.  Благодаря
+    этому появились современные смартфоны и повсеместно
+    распространяется беспроводной Интернет.  Но что стоит за
+    аккумуляторами и энергетикой?
 
-- name: Возобновляемая энергетика
+
+- name: Отзыв о педагогической практике
   links:
-    - name: 300 вопросов и ответов
-      url: https://konstantin-morenko.ru/phd-renewable-book/
-  since: 2022
+    - name: Материалы
+      url: https://konstantin-morenko.ru/ped-practice-review/
+    - name: pdf-файл
+      url: https://konstantin-morenko.ru/ped-practice-review/ped-practice-review.pdf
+  years: 2019
 
-  quote:
+  quote: Может ли аспирант преподавать?
   description: |
 
-    Возобновляемая энергетика становится все более популярной.  Этому
-    способствует как технологический прогресс, так и забота об
-    экологии.  Для аспирантов, изучающих вопросы возобновляемой
-    энергетики.
+    Педагогическая деятельность — огромная сфера не только
+    фундаментальных, но и прикладных научных исследований.  И еще
+    огромная сфера производства — начиная от детских садов и
+    заканчивая аспирантурой.  Всякий аспирант должен пройти
+    педагогическую практику.  Но как оценить его знания и навыки в
+    области педагогики?  С помощью четких и однозначных критериев?  А
+    как элегантно включить эту оценку в документооборот?  С помощью
+    стандартной формы «отзыва о педагогической практике».
