--- a/_data/projects/education.yml
+++ b/_data/projects/education.yml
@@ -126,6 +126,7 @@ cards:
       url: https://konstantin-morenko.ru/ped-practice-review/
     - name: pdf-файл
       url: https://konstantin-morenko.ru/ped-practice-review/ped-practice-review.pdf
+  level: Аспирантура
   till: 2019
 
   quote: Может ли аспирант преподавать?
