--- a/_data/science.yml
+++ b/_data/science.yml
@@ -55,7 +55,7 @@ cards:
   quote: Каждая научная статья начинается одинаково — сначала создаем папку
   description: |
 
-    Каждая научная статья — это не просто "файл", это целая история.
+    Каждая научная статья — это не просто «файл», это целая история.
     Это и поиск литературы по теме, это и текст статьи, это и
     переписка с редакцией.  Да еще и текст статьи часто включает
     схемы, графики, фотографии.  Очень легко увязнуть в материалах,
